--- a/CSS/detail.css
+++ b/CSS/detail.css
@@ -122,7 +122,7 @@ hr{
     .container{
         position: absolute;
         width: 85%;
-        height: fit-content;
+        height: 70vh;
         left: 50%;
         top: 50%;
         transform: translate(-50%,-50%);
@@ -139,16 +139,25 @@ hr{
         border-radius: 20px;
     }
 
+    .title, .owner{
+        margin: 1em 0 1.2em 1.2em;
+    }
+    .desc, .time , .location{
+        margin: 0.25em 1em 1.2em 1.2em;
+    }
+
     .rcontainer {
         position: absolute;
         right: 0;
         width: 50%;
         background-color: white;
-        padding: 1.5em 1.5em 0 1.5em;
+        padding: 0.75em 1.5em 0em 1.5em;
         border-top-left-radius: 1.2em;
         border-bottom-left-radius: 1.2em;
         z-index: 2;
         border-radius: 20px;
-        height: 97%;
+        height: 98%;
+        overflow-y: auto;
+        scrollbar-width: none;
     }
 }
