--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -170,7 +170,7 @@ input[type=radio]:checked{
     }
 
     .points{
-        width: 60%;
+        width: fit-content;
         align-self: center;
         display: inline-flex;
         padding: 0.5em 0.75em;
